# esp32-solominer

./: .gitignore  BENCHMARKING.md  CHANGELOG.md  CI_CD_SETUP.md  CMakeLists.txt  COPILOT_SETUP.md  DISPLAY_CONFIG.md  DISPLAY_EXAMPLES.md  DOCUMENTATION_STRUCTURE.md  DUAL_CORE_ARCHITECTURE.md  Doxyfile  ESP32_MINING_STRATEGIES.md  HARDWARE_SHA_ACCELERATION.md  IMPLEMENTATION_SUMMARY.md  MINING_QUICKSTART.md  QUICK_START.md  README.md  TESTING_CHECKLIST.md  generate_docs.sh  sdkconfig.defaults
.github/: copilot-instructions.md  labeler.yml  labels.json  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/agents/: CONTEXT.md
.github/workflows/: README.md  auto-tag.yml  branch-protection.yml  build-and-analyze.yml  build.yml  code-quality.yml  codeql.yml  documentation.yml  labeler.yml  (+10 more)
GPIO_Pin_Test/: .gitignore  CMakeLists.txt  README.md
PCB_Design/: tasteless-beige-wall-e.step  vkaleb-tasteless-beige-wall-e.d356  vkaleb-tasteless-beige-wall-e.dae  vkaleb-tasteless-beige-wall-e.edif  vkaleb-tasteless-beige-wall-e.stl
driver/: README.md  i2c_master.c  i2c_master.h
examples/: benchmark_integration_example.c
main/: CMakeLists.txt  config.h.example  display.c  display.h  display_config.h  main.c  mqtt_handler.c  mqtt_handler.h  ssd1306.c  ssd1306.h  ssd1315.c  ssd1315.h
scripts/: README.md  auto_generate_tests.py  detect_features.py
test/: CMakeLists.txt  README.md  test_i2c_master.c  test_main.c  test_mining.c  test_ssd1306.c  test_ssd1306_auto.c
test/main/: CMakeLists.txt  test_benchmark.c  test_main.c
(+11 files in other folders)
